Updated publisher name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "relm4-snippets",
-  "publisher": "Relm4 Team",
+  "publisher": "relm4",
   "displayName": "Relm4 Snippets",
   "description": "Relm4 code snippets",
   "version": "0.0.1",
